# FLCD

./: CMakeLists.txt  PIF.out  ST.out  lab2-documentation.txt  lab3-documentation.txt  lab4-documentation.txt  lexic.txt  syntax.in  token.in
1a/: p1.cmm  p1err.cmm  p2.cmm  p3.cmm
1b/: token.in
src/: main.cpp
src/data_structures/: HashTable.cpp  HashTable.h
src/model/: CanonicalCollection.cpp  CanonicalCollection.h  FiniteAutomaton.cpp  FiniteAutomaton.h  Grammar.cpp  Grammar.h  Item.cpp  Item.h  LR.cpp  LR.h  ProductionSet.cpp  ProductionSet.h  Scanner.cpp  Scanner.h  State.cpp  State.h  StateType.cpp  StateType.h  SymbolTable.cpp  SymbolTable.h  Transition.cpp  Transition.h
